feat: added followings
